--- a/listacompartilhada/www/templates/menu.html
+++ b/listacompartilhada/www/templates/menu.html
@@ -14,11 +14,15 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content ng-controller="ListCtrl">
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+        <!-- {{getLists()}} -->
+        <ion-item ng-repeat="list in lists" href="#/app/lists/{{list.id}}">
+          {{list.name}}
+        </ion-item>
+        <!-- <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
@@ -29,6 +33,9 @@
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
           Playlists
+        </ion-item> -->
+        <ion-item menu-close href="#/app/newlist">
+          Nova lista
         </ion-item>
       </ion-list>
     </ion-content>
