--- a/listacompartilhada/www/templates/newlist.html
+++ b/listacompartilhada/www/templates/newlist.html
@@ -8,7 +8,7 @@
       <button class="button button-block button-positive" ng-click="addList(list);">
         Adicionar
       </button>
-      <!-- {{lists}} -->
+      {{getLists()}}
     </list>
   </ion-content>
 </ion-view>
