--- a/sharedlist/www/templates/lists.html
+++ b/sharedlist/www/templates/lists.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Listas">
   <ion-content>
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="doRefresh()">
+    </ion-refresher>
     <ion-list>
       <ion-item ng-repeat="list in lists" href="#/app/list/{{list.id}}">
         {{list.name}}
