--- a/sharedlist/www/templates/menu.html
+++ b/sharedlist/www/templates/menu.html
@@ -17,10 +17,16 @@
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content ng-controller="ListCtrl">
+      <ion-refresher
+        pulling-text="Pull to refresh..."
+        on-refresh="doRefresh()">
+      </ion-refresher>
       <ion-list>
-        {{lists}}
         <ion-item ng-repeat="list in lists" href="#/app/list/{{list.id}}">
           {{list.name}}
+        </ion-item>
+        <ion-item menu-close href="#/app/lists">
+          Listas
         </ion-item>
         <ion-item menu-close href="#/app/newlist">
           Nova lista
