Organizado estrutura do projeto;

--- a/sharedlist/www/templates/list.html
+++ b/sharedlist/www/templates/list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{currentList.name}}">
+<ion-view view-title="{{currentList.name}}" ng-controller="sharedListCtrl">
   <ion-content>
     <ion-checkbox dark checked="true"> Daenerys Targaryen</ion-checkbox>
   </ion-content>
