--- a/sharedlist/www/templates/newlist.html
+++ b/sharedlist/www/templates/newlist.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Nova lista">
   <ion-content>
-    <form name="newListForm" ng-controller="ListCtrl">
+    <form name="newListForm" ng-controller="sharedListCtrl">
       <label class="item item-input">
         <input type="text" placeholder="Nome da lista" ng-model="list.name"/>
       </label>
