--- a/sharedlist/www/templates/menu.html
+++ b/sharedlist/www/templates/menu.html
@@ -16,7 +16,7 @@
     <ion-header-bar class="bar-stable">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content ng-controller="ListCtrl">
+    <ion-content ng-controller="sharedListCtrl">
       <ion-refresher
         pulling-text="Pull to refresh..."
         on-refresh="doRefresh()">
