--- a/sharedlist/www/css/style.css
+++ b/sharedlist/www/css/style.css
@@ -1,1 +1,9 @@
-/* Empty. Add your own CSS if you like */
+.bar.bar-stable {
+    background-color: #3B8686;
+  }
+
+.icon.icon-menu {
+  position: absolute;
+  right: 0px;
+  padding-right: 15px;
+}
