Corrigido currentList para apresentar o nome da lista selecionada;

--- a/sharedlist/www/templates/list.html
+++ b/sharedlist/www/templates/list.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{currentList.name}}" ng-controller="sharedListCtrl">
   <ion-content>
-    <ion-checkbox dark checked="true"> Daenerys Targaryen</ion-checkbox>
+    <!-- <ion-checkbox dark checked="true"> Daenerys Targaryen</ion-checkbox> -->
   </ion-content>
 </ion-view>
