--- a/sharedlist/www/templates/list.html
+++ b/sharedlist/www/templates/list.html
@@ -1,5 +1,8 @@
-<ion-view view-title="{{currentList.name}}" ng-controller="listCtrl">
+<ion-view ng-controller="listCtrl">
   <ion-content>
+    <div class="item item-divider">
+      {{currentList.name}}
+    </div>
     <ion-checkbox ng-model="filter.blue">Red</ion-checkbox>
     <ion-checkbox ng-model="filter.yellow">Yellow</ion-checkbox>
     <ion-checkbox ng-model="filter.pink">Pink</ion-checkbox>
