Adicionado view e rota para editar uma lista;

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,7 +1,7 @@
 <ion-view ng-controller="listCtrl">
   <ion-content>
     <div class="item item-divider">
-      {{currentList.name}}
+      {{list.name}}
     </div>
     <ion-checkbox ng-model="filter.blue">Red</ion-checkbox>
     <ion-checkbox ng-model="filter.yellow">Yellow</ion-checkbox>
