--- a/www/templates/lists.html
+++ b/www/templates/lists.html
@@ -7,7 +7,7 @@
     <ion-list>
       <ion-item on-hold="onHold(list)" class="item item-icon-right" ng-repeat="list in lists" href="#/app/list/{{list.id}}">
         {{list.name}}
-        <i class="icon ion-person-stalker" ng-show="{{list.shared}}"></i>
+        <i class="icon ion-ios-people" ng-show="{{list.shared}}"></i>
       </ion-item>
     </ion-list>
   </ion-content>
