Adicionado fixed button para adicionar nova lista;

--- a/www/templates/lists.html
+++ b/www/templates/lists.html
@@ -11,4 +11,9 @@
       </ion-item>
     </ion-list>
   </ion-content>
+  <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large" href="#/app/newlist">
+      <i class="large material-icons">+</i>
+    </a>
+  </div>
 </ion-view>
