Adicionado funcionalidade para exclusão de lista;

--- a/www/templates/editlist.html
+++ b/www/templates/editlist.html
@@ -22,13 +22,12 @@
         </div>
       </div>
       <!-- Button adicionar -->
-      <div class="row">
         <div class="input-field col s6">
+          <a class="waves-effect waves-light btn red" ng-click="deleteList(list);">Excluir</a>
         </div>
         <div class="input-field col s6">
           <a class="waves-effect waves-light btn" ng-click="updateList(list);">Salvar</a>
         </div>
-      </div>
     </form>
   </div>
 </ion-content>
