--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -3,8 +3,11 @@
     <div class="item item-divider">
       {{list.name}}
     </div>
-    <ion-checkbox ng-model="filter.blue">Red</ion-checkbox>
-    <ion-checkbox ng-model="filter.yellow">Yellow</ion-checkbox>
-    <ion-checkbox ng-model="filter.pink">Pink</ion-checkbox>
+
+    <ion-list>
+      <ion-item on-hold="" class="item item-icon-right" ng-repeat="item in itens">
+        <ion-checkbox ng-model="item.name">{{item.name}}</ion-checkbox>
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
