--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -12,4 +12,9 @@
       </ion-item>
     </ion-list>
   </ion-content>
+  <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large" href="#/app/newitem">
+      <i class="large material-icons">+</i>
+    </a>
+  </div>
 </ion-view>
