--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -11,10 +11,10 @@
           </p>
       </ion-item>
     </ion-list>
+    <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
+      <a class="btn-floating btn-large" href="#/app/newitem/{{list.id}}">
+        <i class="large material-icons">+</i>
+      </a>
+    </div>
   </ion-content>
-  <div class="fixed-action-btn horizontal" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large" href="#/app/newitem">
-      <i class="large material-icons">+</i>
-    </a>
-  </div>
 </ion-view>
