Desabilitado cache dasa telas para atualizar automáticamente;

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,4 +1,4 @@
-<ion-view ng-controller="listCtrl">
+<ion-view cache-view="false" ng-controller="listCtrl">
   <ion-content>
     <div class="item item-divider">
       {{list.name}}
