--- a/www/templates/lists.html
+++ b/www/templates/lists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Listas">
+<ion-view cache-view="false" view-title="Listas">
   <ion-content>
     <ion-refresher
       pulling-text="Solte para atualizar..."
