--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,4 +1,8 @@
 <ion-view cache-view="false" ng-controller="listCtrl">
+  <ion-nav-buttons side="primary">
+      <a href="#/app/editlist/{{list.id}}" class="button button-clear button-positive">Editar</a>
+  </ion-nav-buttons>
+
   <ion-content>
     <div class="item item-divider">
       {{list.name}}
