Adicionado funcionalidades de edição de lista;

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,6 +1,6 @@
 <ion-view cache-view="false" view-title="{{list.name}}" ng-controller="listCtrl">
   <ion-nav-buttons side="primary">
-      <a href="#/app/editlist/{{list.id}}" class="button button-clear button-positive">Editar</a>
+      <a href="#/app/editlist/{{list._id}}" class="button button-clear button-positive">Editar</a>
   </ion-nav-buttons>
 
   <ion-content>
