--- a/www/templates/lists.html
+++ b/www/templates/lists.html
@@ -5,7 +5,7 @@
       on-refresh="doRefresh()">
     </ion-refresher>
     <ion-list>
-      <ion-item class="item item-icon-right" ng-repeat="list in lists | orderBy:'id'" href="#/app/list/{{list.id}}">
+      <ion-item class="item item-icon-right" ng-repeat="list in lists | orderBy:'list.doc._id'" href="#/app/list/{{list.doc._id}}">
         {{list.doc.name}}
         <i class="icon ion-ios-people" ng-show="{{list.doc.shared}}"></i>
       </ion-item>
